# C-Assignment-code

./: README.md  README.txt
C_part/: CMakeLists.txt  Main.c  Main.h  ObserversLinkedList.c  ObserversLinkedList.h  PositionsLinkedList.c  PositionsLinkedList.h  SightingsLinkedList.c  SightingsLinkedList.h
codeCpp11/: CMakeLists.txt  Location.cpp  Location.h  Main.cpp  Mammal.cpp  Mammal.h  Pod.cpp  Pod.h  Printer.cpp  Printer.h  Sea.cpp  Sea.h
